feat: add week8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "inetutils",
         "TSUKUB",
-        "TSUKUBA"
+        "TSUKUBA",
+        "countchr",
+        "rheader"
     ],
     "files.associations": {
         "stdio.h": "c"
