--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
     "cSpell.words": [
-        "inetutils",
-        "TSUKUB",
-        "TSUKUBA",
         "countchr",
-        "rheader"
+        "inetutils",
+        "opval",
+        "rheader",
+        "syspro",
+        "TSUKUB",
+        "TSUKUBA"
     ],
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "types.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "nixEnvSelector.nixFile": "${workspaceFolder}/flake.nix"
