featL add week10

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "byteorder",
         "countchr",
+        "filterwarnings",
+        "getfirst",
         "inetutils",
         "opval",
         "rheader",
